--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "git-cz": "^3.0.0",
     "husky": "^1.3.1",
@@ -82,10 +82,13 @@
     "jest": "^24.0.0",
     "jest-canvas-mock": "~1.1.0",
     "lerna": "^4.0.0",
-    "lint-staged": "~8.1.0",
+    "lint-staged": "~8.2.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.0",
     "prettier": "^2.0.0",
+    "stylelint": "^14.0.0",
     "quickenv": "^0.0.6",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "svelte": "<3"
   }
 }
