--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -12,11 +12,15 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@mamba/keyboard": "*"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.17.10",
     "@babel/core": "^7",
+    "eslint": "^7.0.0",
+    "postcss": "^7.0.0",
+    "stylelint": "^14.0.0",
+    "typescript": "^4.0.0",
+    "svelte": "<3"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.17.10",
     "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -36,12 +40,11 @@
     "chalk": "^2.4.2",
     "core-js": "~3.4.0",
     "css-mqpacker": "^7.0.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -51,7 +54,7 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-hexrgba": "^1.0.2",
-    "postcss-html": "^0.36.0",
+    "postcss-html": "^1.0.0",
     "postcss-nested": "^4.0.0",
     "postcss-preset-env": "^6.0.0",
     "postcss-reporter": "^6.0.1",
@@ -59,12 +62,10 @@
     "prettier": "^2.6.0",
     "quickenv": "^0.0.6",
     "resolve": "^1.10.0",
-    "stylelint": "^14.0.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
-    "svelte": "<3",
+    "stylelint-config-html": "^1.0.0",
     "svelte-preprocess": "<3",
-    "typescript": "^4.7.2",
     "webpack-merge": "^4.2.1"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
