--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -13,22 +13,20 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@mamba/core": "*",
     "immer": "^2.1.5",
     "svelte": "<3"
   },
-  "devDependencies": {
-    "@mamba/core": "*",
+  "peerDependencies": {
     "@mamba/app": ">=4",
     "@mamba/button": ">=4",
     "@mamba/dialog": ">=4",
     "@mamba/icon": ">=4",
     "@mamba/radio": ">=4",
     "@mamba/sprite": ">=4",
+    "@mamba/switch": ">=4",
     "@mamba/utils": ">=4",
-    "@mamba/switch": ">=4"
-  },
-  "peerDependencies": {
-    "@mamba/keyboard": "*"
+    "svelte": "<3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
