--- a/package.json
+++ b/package.json
@@ -61,13 +61,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@mamba/pos": "*",
     "@babel/eslint-parser": "^7.18.2",
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^14.1.0",
     "@commitlint/config-lerna-scopes": "^15.0.0",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "babel-jest": "^24.5.0",
+    "babel-jest": "^27.3.1",
     "commitizen": "^3.1.2",
     "cross-env": "^5.2.0",
     "deasync": "^0.1.14",
@@ -75,20 +77,24 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.0.0",
     "git-cz": "^3.0.0",
     "husky": "^1.3.1",
     "immer": "^2.1.5",
-    "jest": "^24.0.0",
-    "jest-canvas-mock": "~1.1.0",
+    "jest": ">=28.0.0 <29.0.0-0",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-environment-jsdom": "28.1.0",
+    "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "~8.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.0",
     "prettier": "^2.0.0",
-    "stylelint": "^14.0.0",
     "quickenv": "^0.0.6",
-    "typescript": "^4.7.2",
-    "svelte": "<3"
+    "stylelint": "^14.0.0",
+    "svelte": "<3",
+    "ts-jest": "^28.0.0",
+    "typescript": "^4.7.2"
   }
 }
