--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -13,7 +13,8 @@
   },
   "peerDependencies": {
     "@mamba/icon": ">=4",
-    "@mamba/styles": ">=4"
+    "@mamba/styles": ">=4",
+    "svelte": "<3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
