--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -17,6 +17,7 @@
     "postcss": "^7.0.0",
     "stylelint": "^14.0.0",
     "typescript": "^4.0.0",
+    "prettier": "^2.0.0",
     "svelte": "<3"
   },
   "dependencies": {
