--- a/packages/components/Keyboard/tsconfig.json
+++ b/packages/components/Keyboard/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "declarationDir": "types",
     "allowJs": true,
     "sourceMap": true,
     "inlineSourceMap": false,
