--- a/packages/components/Keyboard/tsconfig.json
+++ b/packages/components/Keyboard/tsconfig.json
@@ -15,6 +15,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
     "strict": true,
+    "strictNullChecks": true,
     "isolatedModules": true,
     "removeComments": false,
     "typeRoots": ["../../../node_modules/@types", "src/customTypes"]
