--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -11,6 +11,10 @@
     "node": ">= 8 || <= 14",
     "npm": "^7 || ^8"
   },
+  "files": [
+    "*",
+    "!src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stone-payments/pos-mamba-sdk.git",
@@ -28,6 +32,7 @@
   },
   "peerDependencies": {
     "@mamba/core": "*",
-    "@mamba/pos": ">=4"
+    "@mamba/pos": ">=4",
+    "@mamba/input": ">=4"
   }
 }
