--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -32,7 +32,12 @@
   },
   "peerDependencies": {
     "@mamba/core": "*",
-    "@mamba/pos": ">=4",
-    "@mamba/input": ">=4"
+    "@mamba/input": ">=4",
+    "@mamba/pos": ">=4"
+  },
+  "devDependencies": {
+    "typedoc": "^0.23.2",
+    "typedoc-plugin-markdown": "^3.13.2",
+    "vuepress-plugin-typedoc": "^0.10.3"
   }
 }
