refactor: 💡 change key map to mamba cor; rename native to api

--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -28,7 +28,8 @@
     "start": "yarn run prebuild && tsc -d -w",
     "prebuild": "rimraf dist types",
     "compile": "tsc -p tsconfig.json",
-    "build": "run-s prebuild compile"
+    "build": "run-s prebuild compile",
+    "prepare": "npm run build"
   },
   "peerDependencies": {
     "@mamba/core": "*",
