chore(release): :robot: publish
 - @mamba/cli@4.0.0
 - @mamba/configs@4.0.0
 - @mamba/logger@4.0.0
 - @mamba/pos@4.0.0
 - @mamba/styles@4.0.0
 - @mamba/utils@5.0.0
 - @mamba/webpack@4.0.0
 - @mamba/app@5.0.0
 - @mamba/appbar@4.0.0
 - @mamba/barcode@4.0.0
 - @mamba/brands@4.0.0
 - @mamba/button@5.0.0
 - @mamba/carousel@4.0.0
 - @mamba/collection@4.0.0
 - @mamba/container@4.0.0
 - @mamba/dialog@4.0.0
 - @mamba/flatlist@6.0.0
 - @mamba/icon@4.0.0
 - @mamba/input@6.0.0
 - @mamba/keyboard@1.0.0
 - @mamba/printable@5.0.0
 - @mamba/progress@4.0.0
 - @mamba/qrcode@4.0.0
 - @mamba/radio@4.0.0
 - @mamba/range@5.0.0
 - @mamba/sprite@4.0.0
 - @mamba/switch@5.0.0
 - @mamba/tabs@4.0.0
 - @mamba/toast@4.0.0

--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/flatlist",
-  "version": "5.2.0",
+  "version": "6.0.0",
   "svelte": "Flatlist.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -14,10 +14,10 @@
     "access": "public"
   },
   "peerDependencies": {
+    "@mamba/core": "*",
     "@mamba/icon": ">=4",
     "@mamba/styles": ">=4",
-    "@mamba/utils": ">=4",
-    "@mamba/core": "*"
+    "@mamba/utils": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
