--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/input",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "svelte": "Input.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -15,11 +15,11 @@
     "@mamba/styles": ">=4"
   },
   "peerDependencies": {
+    "@mamba/core": "*",
     "@mamba/icon": ">=4",
-    "@mamba/pos": ">=4",
-    "@mamba/utils": ">=4",
     "@mamba/keyboard": "*",
-    "@mamba/core": "*"
+    "@mamba/pos": ">=4",
+    "@mamba/utils": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
