--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -13,10 +13,13 @@
   },
   "peerDependencies": {
     "@mamba/button": "*",
+    "@mamba/keyboard": "*",
     "@mamba/pos": ">=4",
-    "@mamba/utils": ">=4",
     "@mamba/styles": ">=4",
-    "@mamba/keyboard": "*"
+    "@mamba/utils": ">=4"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
