--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -15,10 +15,10 @@
     "@babel/core": "^7",
     "eslint": "^7.0.0",
     "postcss": "^7.0.0",
-    "stylelint": "^14.0.0",
-    "typescript": "^4.0.0",
     "prettier": "^2.0.0",
-    "svelte": "<3"
+    "stylelint": "^14.0.0",
+    "svelte": "<3",
+    "typescript": "^4.0.0"
   },
   "dependencies": {
     "@babel/cli": "^7.17.10",
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^5.27.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-airbnb": "^5.0.0",
     "chalk": "^2.4.2",
@@ -49,6 +50,7 @@
     "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "lodash": "^4.17.21",
     "postcss-advanced-variables": "^3.0.0",
     "postcss-calc": "^7.0.1",
     "postcss-easy-import": "^3.0.0",
@@ -62,9 +64,9 @@
     "prettier": "^2.6.0",
     "quickenv": "^0.0.6",
     "resolve": "^1.10.0",
+    "stylelint-config-html": "^1.0.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
-    "stylelint-config-html": "^1.0.0",
     "svelte-preprocess": "<3",
     "webpack-merge": "^4.2.1"
   },
