--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -26,6 +26,7 @@
     "filemanager-webpack-plugin": "^2.0.5",
     "html-minifier": "^4.0.0",
     "json-loader": "^0.5.7",
+    "lodash-webpack-plugin": "^0.11.6",
     "mini-css-extract-plugin": "^0.6.0",
     "mini-html-webpack-plugin": "^0.2.3",
     "optimize-css-assets-webpack-plugin": "^5.0.8",
