--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/button",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "svelte": "Button.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -54,7 +54,7 @@
     }
   ],
   "devDependencies": {
-    "@mamba/icon": ">=4"
+    "@mamba/icon": "4.0.1"
   },
   "peerDependencies": {
     "@mamba/styles": ">=4"
