--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/input",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "svelte": "Input.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": ">=4"
+    "@mamba/styles": "4.0.1"
   },
   "peerDependencies": {
     "@mamba/core": "*",
