--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -20,6 +20,7 @@
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
   "dependencies": {
+    "@mamba/core": "*",
     "lodash": "^4.17.21"
   }
 }
