--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -15,5 +15,8 @@
     "@mamba/icon": ">=4",
     "@mamba/styles": ">=4"
   },
-  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
+  "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
+  "dependencies": {
+    "@mamba/core": "*"
+  }
 }
