--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -14,10 +14,11 @@
     "access": "public"
   },
   "peerDependencies": {
+    "@mamba/core": "*",
     "@mamba/icon": ">=4",
+    "@mamba/keyboard": "*",
     "@mamba/styles": ">=4",
-    "@mamba/utils": ">=4",
-    "@mamba/core": "*"
+    "@mamba/utils": ">=4"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
