--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "babel-loader": "^8.0.4",
+    "babel-plugin-lodash": "^3.3.4",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "css-loader": "^2.1.0",
