--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -14,19 +14,20 @@
   "main": "index.js",
   "dependencies": {
     "immer": "^2.1.5",
+    "lodash": "^4.17.21",
     "svelte": "<3"
   },
   "peerDependencies": {
-    "@mamba/core": "*",
     "@mamba/app": ">=4",
     "@mamba/button": ">=4",
+    "@mamba/core": "*",
     "@mamba/dialog": ">=4",
     "@mamba/icon": ">=4",
+    "@mamba/keyboard": "*",
     "@mamba/radio": ">=4",
     "@mamba/sprite": ">=4",
     "@mamba/switch": ">=4",
-    "@mamba/utils": ">=4",
-    "@mamba/keyboard": "*"
+    "@mamba/utils": ">=4"
   },
   "gitHead": "78978116d5c790c51aaf9af9db47ea8beaa4726b"
 }
