--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "date-fns": "2.28.0",
-    "date-fns-tz": "1.2.2"
+    "date-fns-tz": "1.2.2",
+    "lodash": "^4.17.21"
   },
   "gitHead": "0daaddf15510894989750580009daa93e1fbb6db"
 }
