--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "publishConfig": {
     "access": "public"
@@ -14,9 +14,9 @@
   "peerDependencies": {
     "@mamba/button": "*",
     "@mamba/keyboard": "*",
-    "@mamba/pos": ">=4",
-    "@mamba/styles": ">=4",
-    "@mamba/utils": ">=4"
+    "@mamba/pos": ">=3",
+    "@mamba/styles": ">=3",
+    "@mamba/utils": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
