--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "publishConfig": {
     "access": "public"
@@ -57,7 +57,7 @@
     "@mamba/icon": "4.0.1"
   },
   "peerDependencies": {
-    "@mamba/styles": ">=4"
+    "@mamba/styles": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
