--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "publishConfig": {
     "access": "public"
@@ -16,7 +16,7 @@
     "@mamba/switch": "5.0.1"
   },
   "peerDependencies": {
-    "@mamba/icon": ">=4"
+    "@mamba/icon": ">=3"
   },
   "gitHead": "798929523737000b8c07303e9c66feff5a8b9340"
 }
