--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -8,16 +8,16 @@
   "main": "index.js",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
     "@mamba/core": "*",
-    "@mamba/icon": ">=4",
-    "@mamba/styles": ">=4",
-    "@mamba/utils": ">=4"
+    "@mamba/icon": ">=3",
+    "@mamba/styles": ">=3",
+    "@mamba/utils": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
