--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -9,7 +9,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "files": [
     "*",
@@ -33,8 +33,8 @@
   },
   "peerDependencies": {
     "@mamba/core": "*",
-    "@mamba/input": ">=4",
-    "@mamba/utils": ">=4"
+    "@mamba/input": ">=3",
+    "@mamba/utils": ">=3"
   },
   "gitHead": "798929523737000b8c07303e9c66feff5a8b9340"
 }
