--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -6,13 +6,13 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": ">=6"
   },
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
-    "@mamba/styles": ">=4"
+    "@mamba/styles": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
