--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -9,10 +9,10 @@
   },
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^7 || ^8"
+    "npm": "^6 || ^7 || ^8"
   },
   "peerDependencies": {
-    "@mamba/configs": ">=4"
+    "@mamba/configs": ">=3"
   },
   "dependencies": {
     "babel-loader": "^8.0.4",
