refactor: 💡 use dependencies prop to deal with npm 6 users

--- a/packages/components/Carousel/package.json
+++ b/packages/components/Carousel/package.json
@@ -11,7 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@mamba/icon": ">=3",
     "@mamba/styles": ">=3"
   },
