--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -11,7 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@mamba/dialog": ">=3",
     "@mamba/pos": ">=3"
   },
