--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -56,7 +56,7 @@
   "devDependencies": {
     "@mamba/icon": "4.0.2"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@mamba/styles": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
