--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -12,7 +12,7 @@
     "access": "public"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
-  "peerDependencies": {
+  "dependencies": {
     "@mamba/styles": ">=3"
   }
 }
