--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -11,7 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "peerDependencies": {
+  "dependencies": {
     "@mamba/styles": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
