--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -12,10 +12,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@mamba/styles": ">=3",
     "qrious": "^4.0.2"
-  },
-  "peerDependencies": {
-    "@mamba/styles": ">=3"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
