--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -11,10 +11,8 @@
     "node": ">= 8 || <= 14",
     "npm": "^6 || ^7 || ^8"
   },
-  "peerDependencies": {
-    "@mamba/configs": ">=3"
-  },
   "dependencies": {
+    "@mamba/configs": ">=3",
     "babel-loader": "^8.0.4",
     "babel-plugin-lodash": "^3.3.4",
     "body-parser": "^1.19.0",
