--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">=6"
+    "npm": ">6"
   },
   "publishConfig": {
     "access": "public"
