--- a/packages/components/Keyboard/package.json
+++ b/packages/components/Keyboard/package.json
@@ -9,7 +9,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">=6"
+    "npm": ">6"
   },
   "files": [
     "*",
