--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": "^6 || ^7 || ^8"
+    "npm": ">6"
   },
   "dependencies": {
     "@mamba/configs": ">=3",
