--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:watch": "jest --watch --collect-coverage",
     "test:ci": "jest --no-cache --verbose",
     "link:packages": "lerna exec npm link",
-    "build:modules": "lerna run --no-bail --scope=\"@mamba/{keyboard,core}*\" build",
+    "build:modules": "lerna run --no-bail --scope=\"@mamba/{keyboard,core,styles}*\" build",
     "postinstall": "run-s build:modules",
     "packages:clear": "lerna exec -- rm -rf node_modules package-lock.json",
     "check-next-version": "echo 'n' | lerna version",
