chore: 🤖 improve source maps

--- a/packages/components/Keyboard/tsconfig.json
+++ b/packages/components/Keyboard/tsconfig.json
@@ -11,7 +11,7 @@
     "declarationDir": "types",
     "allowJs": true,
     "sourceMap": true,
-    "inlineSourceMap": false,
+    "inlineSources": false,
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
