--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -33,6 +33,7 @@
     "postcss-loader": "^3.0.0",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^3.0.0",
+    "source-map-loader": "1.1.1",
     "style-loader": "^0.23.1",
     "svelte": "<3",
     "svelte-loader": "^2.12.0",
