chore(release): :robot: publish
 - @mamba/cli@4.1.0
 - @mamba/configs@4.1.0
 - @mamba/core@1.2.0
 - @mamba/logger@4.1.0
 - @mamba/pos@4.1.0
 - @mamba/styles@4.1.0
 - @mamba/utils@5.1.0
 - @mamba/webpack@4.1.0
 - @mamba/app@5.1.0
 - @mamba/appbar@4.1.0
 - @mamba/barcode@4.1.0
 - @mamba/brands@4.1.0
 - @mamba/button@5.1.0
 - @mamba/carousel@4.1.0
 - @mamba/collection@4.1.0
 - @mamba/container@4.1.0
 - @mamba/dialog@4.1.0
 - @mamba/flatlist@6.1.0
 - @mamba/icon@4.1.0
 - @mamba/input@6.1.0
 - @mamba/keyboard@1.1.0
 - @mamba/printable@5.1.0
 - @mamba/progress@4.1.0
 - @mamba/qrcode@4.1.0
 - @mamba/radio@4.1.0
 - @mamba/range@5.1.0
 - @mamba/sprite@4.1.0
 - @mamba/switch@5.1.0
 - @mamba/tabs@4.1.0
 - @mamba/toast@4.1.0

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "5.0.2",
+  "version": "5.1.0",
   "svelte": "App.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -13,12 +13,12 @@
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
   "dependencies": {
-    "@mamba/core": "*",
-    "@mamba/button": "*",
-    "@mamba/keyboard": "*",
-    "@mamba/pos": ">=3",
-    "@mamba/styles": ">=3",
-    "@mamba/utils": ">=3",
+    "@mamba/button": "5.1.0",
+    "@mamba/core": "1.2.0",
+    "@mamba/keyboard": "1.1.0",
+    "@mamba/pos": "4.1.0",
+    "@mamba/styles": "4.1.0",
+    "@mamba/utils": "5.1.0",
     "lodash": "^4.17.21"
   }
 }
