--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/flatlist",
-  "version": "6.0.2",
+  "version": "6.1.0",
   "svelte": "Flatlist.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -14,11 +14,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@mamba/core": "*",
-    "@mamba/icon": ">=3",
-    "@mamba/keyboard": "*",
-    "@mamba/styles": ">=3",
-    "@mamba/utils": ">=3"
+    "@mamba/core": "1.2.0",
+    "@mamba/icon": "4.1.0",
+    "@mamba/keyboard": "1.1.0",
+    "@mamba/styles": "4.1.0",
+    "@mamba/utils": "5.1.0"
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db"
 }
