--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/icon",
-  "version": "4.0.2",
+  "version": "4.1.0",
   "svelte": "Icon.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -13,6 +13,6 @@
   },
   "gitHead": "ddc05702292f5dea2772130436f0a00fbd5be1db",
   "dependencies": {
-    "@mamba/styles": ">=3"
+    "@mamba/styles": "4.1.0"
   }
 }
