--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.11",
     "eslint": "^7.0.0",
