--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -16,5 +16,6 @@
     "type": "git",
     "url": "https://github.com/stone-payments/pos-mamba-sdk.git",
     "directory": "packages/logger"
-  }
+  },
+  "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
