--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -15,6 +15,7 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7",
     "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "~7.12.17",
