fix: 🐛 fix webpack source map loader order

--- a/packages/components/Keyboard/tsconfig.json
+++ b/packages/components/Keyboard/tsconfig.json
@@ -12,6 +12,7 @@
     "allowJs": true,
     "sourceMap": true,
     "inlineSources": false,
+    "sourceRoot": "",
     "declaration": true,
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
