--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -13,7 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@mamba/app": "5.3.0",
+    "@mamba/app": "^5.3.0",
     "@mamba/button": "5.3.0",
     "@mamba/core": "1.4.0",
     "@mamba/dialog": "4.3.0",
