--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "@mamba/core": "1.4.0",
     "@mamba/icon": "4.3.0",
-    "@mamba/styles": "4.4.0"
+    "@mamba/styles": "4.4.0",
+    "@mamba/keyboard": "1.3.0"
+  },
+  "peerDependencies": {
+    "@mamba/keyboard": "1.3.0"
   }
 }
