--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/dialog",
-  "version": "5.0.1",
+  "version": "8.0.0",
   "svelte": "Dialog.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -13,15 +13,15 @@
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000",
   "dependencies": {
-    "@mamba/core": "*",
+    "@mamba/core": "8.0.0",
     "@mamba/icon": "^4.3.0",
-    "@mamba/styles": "^4.4.0",
-    "@mamba/keyboard": "^3.0.0"
+    "@mamba/keyboard": "8.0.0",
+    "@mamba/styles": "^4.4.0"
   },
   "peerDependencies": {
-    "@mamba/keyboard": "^3.0.0",
     "@mamba/core": "^2.0.0",
     "@mamba/icon": "^5.0.0",
+    "@mamba/keyboard": "^3.0.0",
     "@mamba/styles": "^5.0.0"
   }
 }
