--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">6"
+    "npm": ">= 7"
   },
   "publishConfig": {
     "access": "public"
@@ -19,6 +19,10 @@
     "@mamba/keyboard": "8.0.0",
     "@mamba/styles": "8.0.0",
     "@mamba/utils": "8.0.0"
+  },
+  "peerDependencies": {
+    "@mamba/core": "8.0.0",
+    "@mamba/keyboard": "8.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
