--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">6"
+    "npm": ">= 7"
   },
   "publishConfig": {
     "access": "public"
@@ -20,6 +20,10 @@
     "@mamba/keyboard": "8.0.0",
     "@mamba/pos": "8.0.0",
     "@mamba/utils": "8.0.0"
+  },
+  "peerDependencies": {
+    "@mamba/core": "8.0.0",
+    "@mamba/keyboard": "8.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
