--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">6"
+    "npm": ">= 7"
   },
   "publishConfig": {
     "access": "public"
@@ -14,14 +14,12 @@
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000",
   "dependencies": {
     "@mamba/core": "8.0.0",
-    "@mamba/icon": "^4.3.0",
+    "@mamba/icon": "8.0.0",
     "@mamba/keyboard": "8.0.0",
-    "@mamba/styles": "^4.4.0"
+    "@mamba/styles": "8.0.0"
   },
   "peerDependencies": {
-    "@mamba/core": "^2.0.0",
-    "@mamba/icon": "^5.0.0",
-    "@mamba/keyboard": "^3.0.0",
-    "@mamba/styles": "^5.0.0"
+    "@mamba/core": "8.0.0",
+    "@mamba/keyboard": "8.0.0"
   }
 }
