--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": ">= 8 || <= 14",
-    "npm": ">6"
+    "npm": ">= 7"
   },
   "dependencies": {
     "@mamba/configs": "8.0.0",
@@ -49,6 +49,9 @@
     "webpack-virtual-modules": "^0.1.10",
     "webpackbar": "^3.1.4",
     "xmlbuilder": "^12.0.0"
+  },
+  "peerDependencies": {
+    "@mamba/configs": "8.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
