--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -24,5 +24,12 @@
     "@mamba/core": "8.0.0",
     "@mamba/keyboard": "8.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
