--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -15,5 +15,12 @@
     "@mamba/styles": "8.0.0",
     "qrious": "^4.0.2"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
