--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -18,5 +18,12 @@
   "peerDependencies": {
     "@mamba/icon": "8.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
