--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -11,6 +11,13 @@
   "publishConfig": {
     "access": "public"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000",
   "dependencies": {
     "@mamba/core": "8.0.0",
