--- a/packages/components/Sprite/package.json
+++ b/packages/components/Sprite/package.json
@@ -11,5 +11,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
