--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -14,5 +14,12 @@
   "devDependencies": {
     "@mamba/collection": "8.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
