chore: 🤖 add examples paths

--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/dialog",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Dialog.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -11,12 +11,19 @@
   "publishConfig": {
     "access": "public"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000",
   "dependencies": {
-    "@mamba/core": "8.0.0",
-    "@mamba/icon": "8.0.0",
-    "@mamba/keyboard": "8.0.0",
-    "@mamba/styles": "8.0.0"
+    "@mamba/core": "9.0.0",
+    "@mamba/icon": "9.0.0",
+    "@mamba/keyboard": "9.0.0",
+    "@mamba/styles": "9.0.0"
   },
   "peerDependencies": {
     "@mamba/core": "8.0.0",
