--- a/packages/components/Barcode/package.json
+++ b/packages/components/Barcode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/barcode",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Barcode.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -14,5 +14,12 @@
   "dependencies": {
     "jsbarcode": "^3.11.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
