--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Collection.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,11 +12,18 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "8.0.0",
-    "@mamba/switch": "8.0.0"
+    "@mamba/styles": "9.0.0",
+    "@mamba/switch": "9.0.0"
   },
   "peerDependencies": {
     "@mamba/icon": "8.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
