--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/input",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Input.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,18 +12,25 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "8.0.0"
+    "@mamba/styles": "9.0.0"
   },
   "dependencies": {
-    "@mamba/core": "8.0.0",
-    "@mamba/icon": "8.0.0",
-    "@mamba/keyboard": "8.0.0",
-    "@mamba/pos": "8.0.0",
-    "@mamba/utils": "8.0.0"
+    "@mamba/core": "9.0.0",
+    "@mamba/icon": "9.0.0",
+    "@mamba/keyboard": "9.0.0",
+    "@mamba/pos": "9.0.0",
+    "@mamba/utils": "9.0.0"
   },
   "peerDependencies": {
     "@mamba/core": "8.0.0",
     "@mamba/keyboard": "8.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
