--- a/packages/components/Radio/package.json
+++ b/packages/components/Radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/radio",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Radio.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -11,5 +11,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
