--- a/packages/components/Tabs/package.json
+++ b/packages/components/Tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/tabs",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "svelte": "Tabs.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,7 +12,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/collection": "8.0.0"
+    "@mamba/collection": "9.0.0"
   },
+  "examples": [
+    {
+      "title": "",
+      "path": "example/Example.html",
+      "ih": 240
+    }
+  ],
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
