fix: 🐛 fix mamba core npm files ignore

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,9 +12,11 @@
   },
   "files": [
     "*",
+    "dist",
     "!tsconfig.json",
-    "!keymap",
-    "!currency"
+    "!keymap/*.ts",
+    "!currency/*.ts",
+    "!index.ts"
   ],
   "repository": {
     "type": "git",
