--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -22,11 +22,11 @@
   "dependencies": {
     "@mamba/core": "9.0.1",
     "@mamba/icon": "9.0.0",
-    "@mamba/keyboard": "9.0.1",
+    "@mamba/keyboard": "^9.0.1",
     "@mamba/styles": "9.0.0"
   },
   "peerDependencies": {
-    "@mamba/core": "9.0.0",
-    "@mamba/keyboard": "9.0.0"
+    "@mamba/core": "^9.0.0",
+    "@mamba/keyboard": "^9.0.0"
   }
 }
