chore: 🤖 use caret range semantic version for 9x

--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/button",
-  "version": "9.0.0",
+  "version": "9.0.1",
   "svelte": "Button.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -54,10 +54,10 @@
     }
   ],
   "devDependencies": {
-    "@mamba/icon": "9.0.0"
+    "@mamba/icon": "^9.0.1"
   },
   "dependencies": {
-    "@mamba/styles": "9.0.0"
+    "@mamba/styles": "^9.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
