--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -13,12 +13,12 @@
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000",
   "dependencies": {
-    "@mamba/button": "9.0.0",
-    "@mamba/core": "9.0.1",
+    "@mamba/button": "^9.0.1",
+    "@mamba/core": "^9.0.1",
     "@mamba/keyboard": "^9.0.1",
     "@mamba/pos": "^9.0.1",
-    "@mamba/styles": "9.0.0",
-    "@mamba/utils": "9.0.0",
+    "@mamba/styles": "^9.0.0",
+    "@mamba/utils": "^9.0.0",
     "lodash": "^4.17.21"
   },
   "peerDependencies": {
