--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "9.0.0",
+  "version": "9.0.1",
   "svelte": "Collection.html",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
@@ -12,11 +12,11 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "9.0.0",
+    "@mamba/styles": "^9.0.0",
     "@mamba/switch": "9.0.0"
   },
   "peerDependencies": {
-    "@mamba/icon": "9.0.0"
+    "@mamba/icon": "^9.0.0"
   },
   "examples": [
     {
