--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -12,14 +12,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@mamba/styles": "9.0.0"
+    "@mamba/styles": "^9.0.0"
   },
   "dependencies": {
-    "@mamba/core": "9.0.1",
-    "@mamba/icon": "9.0.0",
+    "@mamba/core": "^9.0.1",
+    "@mamba/icon": "^9.0.1",
     "@mamba/keyboard": "^9.0.1",
     "@mamba/pos": "^9.0.1",
-    "@mamba/utils": "9.0.0"
+    "@mamba/utils": "^9.0.0"
   },
   "peerDependencies": {
     "@mamba/core": "^9.0.0",
