refactor: 💡 configure new monorepo scaffolding tooling

--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,9 +1,7 @@
-node_modules/
-dist/
+node_modules
+dist
 packages/components/Keyboard/lib
-/packages/components/**/example/index.html
-LICENSE
-*.*
+packages/components/**/example/index.html
 !*.html
 !*.svelte
 !*.css
