--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "@mamba/babel-preset",
+  "name": "@mamba/babel-config",
   "description": "TS Babel preset config for Mamba SDK & Webpack 5",
   "version": "1.0.0",
   "license": "Apache-2.0",
-  "main": "index.js",
+  "engines": {
+    "node": ">= 19",
+    "npm": ">= 7"
+  },
+  "main": "index.cjs",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
@@ -19,9 +24,27 @@
     "url": "https://github.com/stone-payments/pos-mamba-sdk.git",
     "directory": "packages/babel"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-react-remove-properties": "^0.3.0"
+  },
   "peerDependencies": {
-    "webpack": "^5",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9",
+    "webpack": "^5"
   }
 }
