refactor: 💡 not ignore main *.d.ts files

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist
 dist-ssr
 *.local
 packages/**/*.d.*
+!packages/**/index.d.ts
+!packages/**/global.d.ts
+!packages/**/mamba.d.ts
 packages/**/*.map
 .tmp
 packages/**/dist
