refactor: 💡 migrates to postcss 8

--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -31,6 +31,8 @@
     "prepublish": "yarn run test"
   },
   "dependencies": {
+    "@mamba/styles": "workspace:^",
+    "@mamba/utils": "workspace:^",
     "@testing-library/jest-dom": "^5.16.5",
     "@tsconfig/svelte": "^4.0.1",
     "autoprefixer": "^10.4.14",
