--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,13 +15,13 @@
     "mamba": "./cli.js"
   },
   "dependencies": {
+    "@mamba/utils": "workspace:*",
     "case": "^1.6.1",
-    "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
     "global-dirs": "^0.1.1",
     "import-global": "^0.1.0",
     "inquirer": "^6.2.2",
-    "quickenv": "^0.0.6",
+    "picocolors": "^1.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^13.1.0"
   },
