--- a/packages/configs/typescript/tsconfig.json
+++ b/packages/configs/typescript/tsconfig.json
@@ -33,7 +33,9 @@
     "ignoreDeprecations": "5.0",
     "verbatimModuleSyntax": false,
     "types": [
-      "svelte"
+      "svelte",
+      "jest",
+      "@testing-library/jest-dom"
     ]
   }
 }
