--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -25,8 +25,8 @@
     "@babel/core": "^7",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/eslint-plugin": "^7.19.1",
-    "@mamba/prettier-config": "workspace:^",
-    "@mamba/utils": "workspace:^",
+    "@mamba/prettier-config": "workspace:*",
+    "@mamba/utils": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "eslint-config-airbnb-base": "^15.0.0",
