--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mamba/cli",
-  "version": "9.5.0",
+  "version": "10.0.0",
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 8 || <= 14",
+    "node": ">= 14",
     "npm": ">= 7"
   },
   "publishConfig": {
@@ -17,13 +17,17 @@
   "dependencies": {
     "@mamba/utils": "workspace:*",
     "case": "^1.6.1",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7",
     "global-dirs": "^0.1.1",
     "import-global": "^0.1.0",
     "inquirer": "^6.2.2",
     "picocolors": "^1.0.0",
+    "tsconfig-paths": "^4.2.0",
     "yargonaut": "^1.1.4",
     "yargs": "^13.1.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
