--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -67,9 +67,12 @@
     "typescript": "^5"
   },
   "devDependencies": {
-    "@types/node": "^20.2.3",
+    "@types/node": ">=20",
     "resolve": "^1.22.2",
     "tsd": "^0.28.1"
+  },
+  "optionalDependencies": {
+    "webpack": "^5"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
