--- a/packages/jade/package.json
+++ b/packages/jade/package.json
@@ -24,5 +24,11 @@
   "sideEffects": false,
   "engines": {
     "node": ">=12.0.0"
+  },
+  "peerDependencies": {
+    "eslint": "^8",
+    "svelte": "^3",
+    "typescript": "^5",
+    "webpack": "^5"
   }
 }
