--- a/packages/webpack/tsconfig.json
+++ b/packages/webpack/tsconfig.json
@@ -10,7 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "importsNotUsedAsValues": "remove",
+    "importsNotUsedAsValues": "remove", /*
     "typeRoots": [
       "node_modules/@types",
       "node_modules/@mamba/utils"
@@ -18,7 +18,7 @@
     "types": [
       "node",
       "@mamba/utils"
-    ]
+    ] */
   },
   "ts-node": {
     "esm": true,
@@ -27,7 +27,7 @@
   "typeAcquisition": {
     "include": [
       "webpack",
-      "@mamba/utils"
+      // "@mamba/utils"
     ]
   },
   "include": [
